--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.3.24",
     "immutable": "^4.3.7",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^3.0.0",
